Fix header spacing

--- a/style.css
+++ b/style.css
@@ -52,10 +52,6 @@ body {
    vertical-align: top;   
 }
 
-.lb-header-contact {
-   padding-top: 9px;
-}
-
 .lb-header-website {
    padding-left: 2px;
 }
